// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`MDGenerator should generate content without front matter 1`] = `
"# session-export

> 2026-02-17

---

**user** · 2026-02-17T23:02:38.166Z

Hello, can you help me?

---

**assistant** · 2026-02-17T23:02:52.044Z

Of course! How can I assist you today?

---

**assistant** · 2026-02-17T23:02:59.000Z

Let me write that to a file.

:::{type=custom,collapsed=true}
🔧 **write** · /test.md
✅ **write** · Successfully wrote 100 bytes to /test.md
:::"
`;

exports[`MDGenerator should generate content with front matter 1`] = `
"---
title: "session-export"
date: "2026-02-17"
sessionId: "test-session-123"
model: "unknown"
totalMessages: 4
totalTokens: 0
visibility: "private"
participants:
  user:
    role: "human"
  assistant:
    role: "agent"
---

# session-export

> 2026-02-17

---

**user** · 2026-02-17T23:02:38.166Z

Hello, can you help me?

---

**assistant** · 2026-02-17T23:02:52.044Z

Of course! How can I assist you today?

---

**assistant** · 2026-02-17T23:02:59.000Z

Let me write that to a file.

:::{type=custom,collapsed=true}
🔧 **write** · /test.md
✅ **write** · Successfully wrote 100 bytes to /test.md
:::"
`;

exports[`MDGenerator should exclude timestamps when disabled 1`] = `
"# session-export

> 2026-02-17

---

**user**

Hello, can you help me?

---

**assistant**

Of course! How can I assist you today?

---

**assistant**

Let me write that to a file.

:::{type=custom,collapsed=true}
🔧 **write** · /test.md
✅ **write** · Successfully wrote 100 bytes to /test.md
:::"
`;

exports[`MDGenerator should include total tokens in front matter 1`] = `
"---
title: "session-export"
date: "2026-02-17"
sessionId: "test-session-123"
model: "unknown"
totalMessages: 1
totalTokens: 30
visibility: "private"
participants:
  user:
    role: "human"
---

# session-export

> 2026-02-17

---

**user** · 2026-02-17T23:02:38.166Z

Hello"
`;

exports[`MDGenerator - additional cases should render thinking blocks 1`] = `
"# session-export

> 2026-02-17

---

**assistant** · 2026-02-17T23:02:38.166Z

:::{type=thinking_level_change,collapsed=true}
🧠 **Thinking**
Let me think about this...
:::

Final answer"
`;

exports[`MDGenerator - additional cases should render error tool result 1`] = `
"# session-export

> 2026-02-17

---

:::{type=error,collapsed=false}
❌ **read** · File not found
:::"
`;

exports[`MDGenerator - additional cases should handle empty messages 1`] = `
"# session-export

> 2026-02-17"
`;

exports[`MDGenerator - additional cases should interleave non-message events chronologically 1`] = `
"# session-export

> 2026-02-17

---

:::{type=thinking_level_change,collapsed=true}
🧠 **Thinking** level: off
:::

---

**user** · 2026-02-17T23:02:40.000Z

Hello"
`;

exports[`generateMD convenience function should write markdown to disk 1`] = `
"---
title: "session-export"
date: "2026-02-17"
sessionId: "test-session-123"
model: "unknown"
totalMessages: 4
totalTokens: 0
visibility: "private"
participants:
  user:
    role: "human"
  assistant:
    role: "agent"
---

# session-export

> 2026-02-17

---

**user** · 2026-02-17T23:02:38.166Z

Hello, can you help me?

---

**assistant** · 2026-02-17T23:02:52.044Z

Of course! How can I assist you today?

---

**assistant** · 2026-02-17T23:02:59.000Z

Let me write that to a file.

:::{type=custom,collapsed=true}
🔧 **write** · /test.md
✅ **write** · Successfully wrote 100 bytes to /test.md
:::"
`;

exports[`sample-session-2.jsonl full pipeline should generate markdown from sample-session-2.jsonl 1`] = `
"---
title: "session-export"
date: "2026-02-17"
sessionId: "session-001"
model: "MiniMax-M2.5"
totalMessages: 4
totalTokens: 650
visibility: "private"
participants:
  user:
    role: "human"
  assistant:
    role: "agent"
    model: "MiniMax-M2.5"
---

# session-export

> 2026-02-17

---

:::{type=session,collapsed=true}
Session started (/home/agent/workspace)
:::

---

:::{type=custom,collapsed=true}
Model changed: MiniMax-M2.5 (minimax)
:::

---

:::{type=thinking_level_change,collapsed=true}
🧠 **Thinking** level: off
:::

---

:::{type=custom,collapsed=true}
Model snapshot: MiniMax-M2.5 (minimax)
:::

---

**user** · 2026-02-17T12:00:01.000Z

Hello, this is a test message

---

**assistant** · 2026-02-17T12:00:02.000Z

:::{type=thinking_level_change,collapsed=true}
🧠 **Thinking**
Assistant thinking process here
:::

Assistant response text

:::{type=custom,collapsed=true}
🔧 **write** · /test.txt
✅ **write** · Successfully wrote 100 bytes to /test.txt
:::

---

**assistant** · 2026-02-17T12:00:04.000Z

Final assistant message"
`;
